--- a/ref.bib
+++ b/ref.bib
@@ -553,3 +553,12 @@ eprint = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/wilm.10668},
 abstract = {Dr. Josh Day of Julia Computing takes a look into the multi-indexed database of the future.},
 year = {2018}
 }
+
+@misc{scalaslow,
+  title = {Scala's immutable collections can be slow as a snail},
+  howpublished = {\url{https://medium.com/@hussachai/scalas-immutable-collections-can-be-slow-as-a-snail-da6fc24bc688}},
+  author="Hussachai Puripunpinyo",
+  year=2016,
+  month=oct,
+  note = {Accessed: 2019-08-29}
+}
