--- a/ref.bib
+++ b/ref.bib
@@ -562,3 +562,12 @@ year = {2018}
   month=oct,
   note = {Accessed: 2019-08-29}
 }
+
+@misc{claireh2018,
+    title = {Simulating global plant biodiversity},
+    howpublished = {\url{https://www.youtube.com/watch?v=EahBURR9b1U}},
+    author="Claire Harris, Richard Reeves, et. al}",
+    year=2018,
+    month=aug,
+    note = {Accessed: 2019-08-29}
+}
