--- a/ref.bib
+++ b/ref.bib
@@ -571,3 +571,12 @@ year = {2018}
     month=aug,
     note = {Accessed: 2019-08-29}
 }
+
+@misc{wes2017,
+    title = {Apache Arrow and the "10 Things I Hate About pandas"},
+    howpublished = {\url{https://wesmckinney.com/blog/apache-arrow-pandas-internals/}},
+    author="Wes McKinney"
+    year=2017,
+    month=sep,
+    note = {Accessed: 2019-08-29}
+}
