--- a/paper.tex
+++ b/paper.tex
@@ -14,7 +14,7 @@
 \maketitle
 
 \begin{abstract}
-We describe how the two-language problem manifests in the world of analytical databases. A system with this problem takes at least two languages to implement: a low-level statically compiled language such as C or C++ to implement the performance-sensitive operations, and a high-level dynamic scripting language such as Python or R to implement the user-facing API. This dichotomy usually exists because the latter language cannot compile to efficient machine code like the former, and the former does not have the ease-of-use as the latter. We present JuliaDB, a distributed database for analytical workloads that is built solely in Julia and does not have this and other resulting problems. JuliaDB is designed to allow seamless use of user-defined Julia functions and data types. Julia's just-in-time compilation welds code from across Julia's package ecosystem as well as user code to generate efficient machine code allowing for high-performance data science in a coherent environment. We show a case study involving the use of a custom numeric type. Our benchmark shows that the system can perform on-par with or betters that of pandas and tidyverse in the cases we tested.
+We describe how the two-language problem manifests in the world of analytical databases. A two-language system is one that is implemented using at least two languages: a low-level statically compiled language such as C or C++ to implement the performance-sensitive operations, and a high-level dynamic scripting language such as Python or R to implement the user-facing API. This dichotomy usually exists because the latter language cannot compile to efficient machine code like the former, and the former does not have the ease-of-use as the latter. We present JuliaDB, a distributed analytical database written entirely in Julia. Julia removes the shortcomings of the said two classes of languages: it is both dynamic and easy to use, and compiles to efficient machine code. JuliaDB is designed to allow seamless use of user-defined Julia functions and data types. Julia's just-in-time compilation welds code from across Julia's package ecosystem as well as user code to generate efficient machine code allowing for systems that are greater than the sum of parts. We show a case study involving the use of measurement type to propagate uncertainty in measurements. Our benchmark shows that the system can perform on-par with or better than two-language systems like pandas and tidyverse in the cases we tested.
 
 \headingtable
 
@@ -46,13 +46,13 @@ types. The just-in-time compiler can optimize data base operations and user defi
 can be used without performance penalties. In general, Julia finds the sweet-spot between dynamic
 hassle-free languages such as Python and R helping the data scientist,
 and efficient manually-memory-managed languages such as C or C++ helping
-the database implementer greatly.
+the database implementer and user greatly.
 
 
 
 \section{Design of JuliaDB}
 
-In the following subsection we describe the design of JuliaDB which empowers performance and interoperability.
+In the following subsection we describe the design of JuliaDB which empowers performance and interoperability. It is a testament to Julia's power as an implementation of JuliaDB that we were able to address all problems except "eager evaluation" from the list of problems originally thought to have been seen, some from omission and some due to the two-language divide \cite{wes2017}. We leave the implementation of lazy-evaluated queries for future work.
 
 \subsection{Columnar memory layout}
 The basic datastructure in JuliaDB is the table.
@@ -85,13 +85,15 @@ Listing 1. \emph{A table stores a named tuple of columns, but produces named tup
 
 Listing 1 shows a table constructed from a named tuple of column vectors. Although a table stores data as a named tuple of columns, it acts as an iterator of rows. Rows are tuples or named tuples of items.
 
-Storing data row-by-row is not ideal when a query needs to operate on a small subset of fields for in such cases, one would have to load the whole dataset into memory and wade through it to find the relavent fields. But if we stored the columns separately, a single field's data is all available together and hence queries requiring data from a subset of fields load only data for those fields. The only advantage of row-by-row storage would be to read multiple fields per row on a sequential access optimized device such as tape drive or a spinning-disk hard drive. It's not worth worrying about these cases anymore.
+Storing data row-by-row is not ideal when a query needs to operate on a small subset of fields, for in such cases, one would have to load the whole dataset into memory and wade through it to find the relavent fields. But if we stored the columns separately, a single field's data is all available together, and in simple cases, contiguously in memory. Hence queries requiring data from a subset of fields load only data for those columns. The only advantage of row-by-row storage would be to read multiple fields per row on a sequential access storage device such as tape drive or a spinning-disk hard drive. It's not worth worrying about these cases for an analytical database mostly interested in performance.
 
-The reason a table behaves as an iterator is a matter of convension. It's more helpful to think of writing code one row at a time. JuliaDB creates an immutable struct every time a row needs to be materialized. This may or may not lead to heap-allocation depending on the compiler optimizations that occur. In most cases the compiler is smart enough to eleminate allocation.
+When a table is iterated, it yields named tuples (rows). The reason a table behaves as an iterator of named tuples is a matter of convension. JuliaDB creates an immutable struct every time a row needs to be materialized. This may or may not lead to heap-allocation depending on the compiler optimizations that become possible.
+
+The type of the row tuple is encoded in that of the table itself, hence the Julia compiler always has information about what type a certain field of a certain table is, and is able to propagate it to produce efficient machine code.
 
 The columns can be accessed using the \texttt{columns} function (e.g. \texttt{rows(lotr)} returns a named tuple of column vectors provided to \texttt{table} during construction) while the rows can be accessed as an array of tuples using the \texttt{rows} function rows is a struct of arrays view into the columnar storage, unlike \texttt{table} which returns a JuliaDB table, \texttt{rows} returns a legitimate Julia array.
 
-Tables naturally support \texttt{map}, \texttt{reduce}, \texttt{groupreduce}, \texttt{groupby} and \texttt{join} operations. We will defer their discussion to the API documentation of JuliaDB. Read the Sectoin \ref{sec:sort} for more about the implementation of some of these operations.
+Naturally, tables support \texttt{map}, \texttt{reduce}, \texttt{groupreduce}, \texttt{groupby} and \texttt{join} operations. We will defer their discussion to the API documentation of JuliaDB \cite{juliadbapi}. Read the Sectoin \ref{sec:sort} for more about the implementation of some of these operations.
 
 Listing 1 also illustrates use of \texttt{StringArray} and \texttt{PooledArray} array types as columns. These special array types enable efficient packing of String and categorical data respectively.
 
@@ -102,14 +104,16 @@ Listing 1 also illustrates use of \texttt{StringArray} and \texttt{PooledArray} 
   \label{fig:stringarray}
 \end{figure*}
 
-A \texttt{StringArray}'s memory layout is show in in Figure \ref{fig:stringarray}. The contents of strings (unicode character codes) are packed into a buffer of 8-bit unsigend integers. \texttt{StringArray} also stores the lengths of each string and the index (offset) at which each of them starts. Although it would suffice to store just the length of each string, storing offset also allows us to implement efficient mutation operations. Setting an element of the array appends the new string to the end of the buffer and replaces the length and offset with the corresponding new length and offsets for that item. Operations such as \texttt{sort!} and \texttt{permute!} (in place permutation of items) can simply modify the length and offset arrays and leave the buffer unmodified. Wherever suitable, in code internal to JuliaDB, we create \texttt{WeakRefString} instead of creating String objects when we index into a \texttt{StringArray}, this greatly reduces GC-load when dealing with string columns in operations such as groupby and join.
+A \texttt{StringArray}'s stores a collection of strings with less memory indirection than a usual array of strings. Its memory layout is show in in Figure \ref{fig:stringarray}. The contents of strings (unicode character codes) are packed into a contiguous buffer of 8-bit unsigend integers. \texttt{StringArray} also stores the lengths of each string and the index (offset) at which each of them starts. Although it would suffice to store just the length of each string, storing offset also allows us to implement efficient mutation operations. Setting an element of the array appends the new string to the end of the buffer and replaces the length and offset with the corresponding new length and offsets for that item. Operations such as \texttt{sort!} and \texttt{permute!} (in place permutation of items) can simply modify the length and offset arrays and leave the buffer unmodified. Wherever suitable, in code internal to JuliaDB, we create \texttt{WeakRefString} instead of creating String objects when we index into a \texttt{StringArray}, this greatly reduces GC-load when dealing with string columns in operations such as groupby and join. Some advantages of a StringArray are 1) the buffer, and the length and offset vectors can be memory mapped to disk. 2) it takes less serialization overhead to send the same over the wire to another process.
 
-A \texttt{PooledArray}'s memory layout is shown in Figure \ref{fig:pooledarray}. It is useful in compressing data with low number of unique items as compared to the total number of items. PooledArrays stores a dictionary mapping each unique item to a \texttt{ref} integer, and then an array of refs which tells which unique element appears in what position in the uncompressed array.
+If the number of unique elements in an array is much less than the number of elements in an array, it is benefitial to store it as a PooledArray. A PooledArray stores 1) a dictionary mapping each unique element to an integer (the ref of that value) 2) a dictionary mapping ref to its value (the inverse of 1)) and 3) an array of refs which denotes which unique value appears at what position in the actual data. This is a good compression mechanism for the data as well. PooledArrays also have efficient sorting algorithms as described in the next sub section. PooledArray refs can be memory mapped to and from disk.
 
 \subsection{Sort-based indexing}
 \label{sec:sort}
 
-We implement groupby and join by traversing tables in the key-order. We use counting sort wherever possible (e.g. integer columns, PooledArrays) to do a small amount of initial work on the order of $O(k \log k)$ where $k$ is the number of unique values and then achieve a sorted permutation in $O n$ time where $n$ is the number of rows. In most systems where the implementation is done in C++, the ordering routines are restricted to a handful of primitive data types. In our system any user defined data type with an \texttt{isless} method to compare two items can take part in the sorting.
+We implement \texttt{groupby} and \texttt{join} by traversing tables in the key-order. For example, a groupby operation first finds a permutation of the table which will result in the groupby key fields being sorted, and traveses the table finding contiguous blocks of equal keys, and performs the grouping operation on each contiguous block. The join operation works by traversing two tables in lock-step and combining relavent rows to the type of join being performed and generating the output table.
+
+We use counting sort wherever possible (e.g. integer columns that have acceptable extrema). On PooledArrays, we do a small amount of initial work in the order of $O(k \log k)$ where $k$ is the number of unique values and then find the sorted permutation in $O(n)$ time where $n$ is the number of rows. In most systems where the implementation is done in C++, the ordering routines are restricted to a handful of primitive data types. In our system any user defined data type with an \texttt{isless} method to compare two items can take part in the sorting.
 
 \textbf{Indexing: }For speeding up table operations, you can tell
 JuliaDB to keep the rows of a table sorted by some of its fields.
@@ -119,14 +123,13 @@ with it to compare two values. This includes but is not limited to
 numbers, strings, symbols, dates, time periods, currencies, quantities
 of comparable physical units (e.g. inch, mm).
 
-\subsection{Distributed compute}
+\subsection{Parallelism}
 
 A distributed table is a distributed analogue of the one described
-above. It is stored as many tables across multiple Julia processes,
+above. It is stored as many tables across multiple Julia processes. On distributed tables,
 \texttt{columns} returns a tuple of \emph{distributed arrays} and
 \texttt{rows} returns a distributed array of tuples! The distributed
-arrays implementation has the usual array operations (map, reduce,
-hcat, vcat) defined on it in a distributed manner. Constructing a
+arrays implementation has the usual array operations (\texttt{map}, \texttt{reduce}, \texttt{hcat}, \texttt{vcat}) defined on it. Constructing a
 table with one or more distributed columns using the table constructor
 results in a distributed table. We use the word ``table'' from now on to refer interchangeably to both types of tables, unless
 noted otherwise.
@@ -134,9 +137,9 @@ noted otherwise.
 \section{Case study: manipulating measurements}
 \label{sec:measurements}
 
-We take up a prototypical illustration of the power of JuliaDB by using a custom number type, namely the Measurement type, in a database.
+We take up a prototypical illustration of the power of JuliaDB by creating a table with data of a custom numeric type, namely the \texttt{Measurement} type provided by the Measurments.jl~\cite{giordano2016} package.
 
-Measurements.jl implements the ± operator which represents an observation with some uncertainty associated with it. Numeric operations on measuements propagate the uncertainty as prescribed by linear error propagation theory: For a function application $G(a,b,c...)$ where arguments are measurements $a=\overline{a} \pm \sigma_{a}, b=\overline{b} \pm \sigma_{b}, c=\overline{c} \pm \sigma_{c}$ the error of the output is found using the relationship: 
+Measurements.jl implements the ± operator which takes two numbers -- the mean of the observation and the uncertainty, and constructs a \texttt{Measurement} object. Numeric operations on measuements propagate the uncertainty as prescribed by linear error propagation theory: For a function application $G(a,b,c...)$ where arguments are measurements $a=\overline{a} \pm \sigma_{a}, b=\overline{b} \pm \sigma_{b}, c=\overline{c} \pm \sigma_{c}$ the error of the output is found using the relationship: 
 
 $$\begin{equation}
   \begin{split}
@@ -166,10 +169,11 @@ would involve having to write e.g. a mean function for an array
 of measurements in C; in Julia, it emerges from dynamic
 multiple dispatch, and compiles to C-like code.
 
-Unlike a typical non-Julia analytical database, without any
-first class support for Measurements,
-Pure-julia analytical database
-We can store measurements directly in a JuliaDB table.
+Unlike in two-language analytical systems, JuliaDB need not be aware of the Measurements package as long as it implements a legitimate number type. Many features become available the moment JuliaDB and Measurements packages are included into an environment:
+
+
+\begin{enumerate}
+    \item We can store measurements directly in a JuliaDB table.
 
 \begin{lstlisting}[language=Julia]
 # generate some fake measurements time-series:
@@ -195,7 +199,7 @@ time                     x
 =#
 \end{lstlisting}
 
-Perform groupby-mean without implementing the
+\item Perform groupby-mean without implementing the
 mean function for an array of measurements in C.
 
 \begin{lstlisting}[language=Julia]
@@ -213,7 +217,7 @@ time                 mean
 =#
 \end{lstlisting}
 
-Use OnlineStats for stats on measurements for lesser allocation and parallelism.
+\item Use OnlineStats for stats on measurements for lesser allocation and parallelism.
 
 \begin{lstlisting}
 # assuming Julia session was started with many julia workers
@@ -240,13 +244,15 @@ time                 mean
 =#
 \end{lstlisting}
 
-Finally, the Measurements.jl defines how plotting must be performed for an array of measurements, hence, for example a plotting tool that knows the tabular structure of JuliaDB, such as StatPlots.jl can be readily used to plot the table. The plotting automatically shows error bars representing uncertainty.
+\item the Measurements.jl defines how plotting must be performed for an array of measurements, hence, for example a plotting tool that knows the tabular structure of JuliaDB, such as StatPlots.jl can be readily used to plot the table. The plotting automatically shows error bars representing uncertainty.
 
-The Measurement type in the Measurements.jl ~\cite{giordano2016} package represents physical measurements with some uncertainty. JuliaDB is unaware of the Measurement datatype, yet it can store, read and write to disk, and perform any database operation while using the math defined on the measurement type. In a two-language system, a performant implementation of the measurement datastructure must be done in a low-level language like C. For reasonable performance on queries on columns containing measurements, one may have to implement an array of measurements datastructure in the low-level language as well that supports many array operations. But with JuliaDB and Julia, simply defining the measurement type and the primitive operations on Measurements is enough to achieve all the said features. Measurements can be stored efficiently in Julia arrays, operations such as `mean` and `sum` or broadcast on arrays of measurements fall out their existing generic implementations due to Julia's dynamic multiple-dispatch based JIT compiler.
+\end{enumerate}
+
+In a two-language system, a performant implementation of the measurement datastructure must be done in a low-level language like C. For reasonable performance on queries on columns containing measurements, one may have to implement an array of measurements datastructure in the low-level language as well that supports many array operations. But with JuliaDB and Julia, simply defining the measurement type and the primitive operations on Measurements is enough to achieve all the said features. Measurements can be stored efficiently in Julia arrays, operations such as `mean` and `sum` or broadcast on arrays of measurements fall out their existing generic implementations due to Julia's dynamic multiple-dispatch based JIT compiler.
 
 \section{Benchmarks}
 
-Here we show benchmarks of JuliaDB against other popular data science
+Here we show benchmarks of JuliaDB against other popular analytical
 databases. Where appropriate, we turned off JuliaDB's distributed
 features for fair comparison.
 
@@ -291,15 +297,15 @@ with a UDF, with pandas taking the biggest hit (Figure~\ref{fig:nyctaxiquery}).
 
 Josh Day describes how JuliaDB is a natural time-series database~\cite{wilmott2018} for large datasets without having been designed with the specific purpose of time-series in mind. JuliaDB is used by the package Diversity.jl~\cite{claireh2018} to generate results in understanding the evolutionary relationships between species across the whole kingdom of flowering plants, and simulations to predict responses of plants species to climate change.
 
-\section{Future directions}
+\section{Conclusion}
 
-1. AxisArrays
-2. Query planning
-3. More support for unstructured data
+Julia turns out to be an excellent language for the implementation as well as the usage of an analytical database. Julia's ability to program close to the metal of the computer helps the database implementer, it's rich ecosystem of numerical packages, and ease of use help the user.
+
+As mentioned we leave lazy-evalutation of operations to future work, possibly in more general packages such as Query.jl or DataStreams.jl.
 
 \section{Acknowledgements}
 
-Tanmay Mohapatra, David Anthoff, Jacob Quinn
+The authors would like to thank Tanmay Mohapatra who helped in implementing and debugging the distributed infrastructure underlying JuliaDB. We thank David Anthoff for help with the CSV ingestion utility in JuliaDB, as well as effort to integrate it with his own widely used set of analytics packages known as the "queryverse", and Jacob Quinn, for his valuable feedback, bug fixes and the WeakRefString type which StringArray is based on.
 
 \input{bib.tex}
 
