--- a/ref.bib
+++ b/ref.bib
@@ -580,3 +580,11 @@ year = {2018}
     month=sep,
     note = {Accessed: 2019-08-29}
 }
+
+@misc{juliadbapi,
+    title = {JuliaDB API documentation},
+    howpublished = {\url{https://juliacomputing.github.io/JuliaDB.jl/latest/}},
+    author="Shashi Gowda, Josh Day, Pietro Vertechi, Jeff Bezanson et. al.",
+    note = {Accessed: 2019-08-29}
+}
+
